# me495_hw1

devel/: .catkin  .rosinstall  setup.sh
devel/include/me495_hw1/: ME495Pub.h  ME495Srv.h  ME495SrvRequest.h  ME495SrvResponse.h
devel/lib/agitr/: hello  pub_vel  subpose
devel/lib/me495_hw1/: ros_cl_demo
devel/lib/pkgconfig/: agitr.pc  hw1_jose.pc  me495_hw1.pc
devel/lib/python2.7/dist-packages/me495_hw1/msg/: _ME495Pub.py  __init__.py
devel/lib/python2.7/dist-packages/me495_hw1/srv/: _ME495Srv.py  __init__.py
devel/share/agitr/cmake/: agitrConfig.cmake
devel/share/common-lisp/ros/me495_hw1/msg/: ME495Pub.lisp  _package.lisp  _package_ME495Pub.lisp  me495_hw1-msg.asd
devel/share/common-lisp/ros/me495_hw1/srv/: ME495Srv.lisp  _package.lisp  _package_ME495Srv.lisp  me495_hw1-srv.asd
devel/share/hw1_jose/cmake/: hw1_joseConfig.cmake
devel/share/me495_hw1/cmake/: me495_hw1-msg-paths.cmake  me495_hw1Config.cmake
src/hw1_jose/: CMakeLists.txt  package.xml
src/hw1_jose/bags/: miranda_jose.bag
src/hw1_jose/launch/: hw1.launch
src/hw1_jose/scripts/: hw1_j.py
